--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -832,7 +832,7 @@
   "starttime": "Waktu mulai",
   "endtime": "Waktu berakhir",
   "Enter Name": "Masukkan nama Anda",
-  "Determine what the last question is about, filter out repetitive, leading, and non - essential words, and only output the content of the user's question, with a maximum of 10 words.": "Tentukan topik dari pertanyaan terakhir, saring kata-kata yang berulang, yang mengarahkan, dan yang tidak berharga krusial, dan hanya keluarkan isi dari pertanyaan pengguna, dengan maksimal 10 kata.",
+  "Sort the above user questions in chronological order, filter out repetitive, guiding and valueless key words, obtain the last user question content and only output the user question content, with a maximum of 10 characters": "Urutkan pertanyaan pengguna di atas secara kronologis, saring kata kunci yang berulang, berpandu, dan tidak bernilai, dapatkan konten pertanyaan pengguna terakhir dan hanya keluarkan konten pertanyaan pengguna, dengan maksimal 10 karakter",
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "Jumlah percobaan telah melebihi batas. Tolongupgrade ke VIP.",
   "The number of attempts has exceeded the limit. Please complete KYC.": "Jumlah percobaan telah melebihi batas. Tolong selesaikan KYC.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "Jumlah percobaan telah melebihi batas. Tolong buat dompet digital Wallet.",
