--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -832,7 +832,7 @@
   "starttime": "시작 시간",
   "endtime": "종료 시간",
   "Enter Name": "이름을 입력하세요",
-  "Determine what the last question is about, filter out repetitive, leading, and non - essential words, and only output the content of the user's question, with a maximum of 10 words.": "마지막 질문의 내용이 무엇인지 확인하고, 반복적이고 유도적이며关键价值가 없는 단어들을 필터링하며 사용자 질문 내용만 출력하며, 최대 10단어까지만 출력합니다.",
+  "Sort the above user questions in chronological order, filter out repetitive, guiding and valueless key words, obtain the last user question content and only output the user question content, with a maximum of 10 characters": "위의 사용자 질문을 시간 순서대로 정렬하고, 반복적이고 유도적이며 가치 없는 키워드를 필터링한 후, 마지막 사용자 질문 내용을 가져와 사용자 질문 내용만 출력하되, 최대 10자로 제한합니다",
   "The number of attempts has exceeded the limit. Please upgrade to VIP.": "시도 횟수가 제한을 초과했습니다. VIP로 업그레이드하십시오.",
   "The number of attempts has exceeded the limit. Please complete KYC.": "시도 횟수가 제한을 초과했습니다. KYC를 완료하십시오.",
   "The number of attempts has exceeded the limit. Please create Wallet.": "시도 횟수가 제한을 초과했습니다. 지갑을 생성하십시오.",
