add deep search

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -853,6 +853,7 @@
   "Introduce the code in the file": "",
   "What's the main purpose of the file's code": "",
   "Optimize the code in the file": "",
-  "In web page parsing...": ""
+  "In web page parsing...": "",
+  "Deep Research": ""
 }
 
