--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -853,5 +853,6 @@
   "Introduce the code in the file": "Presenta el código en el archivo",
   "What's the main purpose of the file's code": "¿Cuál es el propósito principal del código del archivo",
   "Optimize the code in the file": "Optimiza el código en el archivo",
-  "In web page parsing...": "Al analizar páginas web..."
+  "In web page parsing...": "Al analizar páginas web...",
+  "Deep Research": "Investigación profunda"
 }
