--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -852,5 +852,6 @@
   "Introduce the code in the file": "Introduisez le code dans le fichier",
   "What's the main purpose of the file's code": "Quel est le principal but du code du fichier",
   "Optimize the code in the file": "Optimisez le code dans le fichier",
-  "In web page parsing...": "Lors du parsing de pages web..."
+  "In web page parsing...": "Lors du parsing de pages web...",
+  "Deep Research": "Recherche approfondie"
 }
