--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -853,5 +853,6 @@
   "Introduce the code in the file": "Perkenalkan kode dalam file",
   "What's the main purpose of the file's code": "Apa tujuan utama kode file",
   "Optimize the code in the file": "Optimalkan kode dalam file",
-  "In web page parsing...": "Saat menguraikan halaman web..."
+  "In web page parsing...": "Saat menguraikan halaman web...",
+  "Deep Research": "Penelitian mendalam"
 }
