--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -853,5 +853,6 @@
   "Introduce the code in the file": "ファイル内のコードを説明してください",
   "What's the main purpose of the file's code": "ファイルのコードの主な目的は何ですか",
   "Optimize the code in the file": "ファイル内のコードを最適化してください",
-  "In web page parsing...": "ウェブページの解析において..."
+  "In web page parsing...": "ウェブページの解析において...",
+  "Deep Research": "Pしょうさいなちょうさ"
 }
