--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -853,5 +853,6 @@
   "Introduce the code in the file": "Dosyadaki kodu tanıtın",
   "What's the main purpose of the file's code": "Dosyanın kodunun ana amacı nedir",
   "Optimize the code in the file": "Dosyadaki kodu optimize edin",
-  "In web page parsing...": "Web sayfası ayrıştırması sırasında..."
+  "In web page parsing...": "Web sayfası ayrıştırması sırasında...",
+  "Deep Research": "Derin Araştırma"
 }
