--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -842,5 +842,6 @@
   "Introduce the code in the file": "Giới thiệu mã trong tệp",
   "What's the main purpose of the file's code": "Mục đích chính của mã trong tệp là gì",
   "Optimize the code in the file": "Tối ưu mã trong tệp",
-  "In web page parsing...": "Trong quá trình phân tích trang web..."
+  "In web page parsing...": "Trong quá trình phân tích trang web...",
+  "Deep Research": "Nghiên cứu sâu sắc"
 }
