--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -854,5 +854,6 @@
   "Introduce the code in the file": "Führen Sie den Code in der Datei ein",
   "What's the main purpose of the file's code": "Was ist der Hauptzweck des Codes in der Datei?",
   "Optimize the code in the file": "Optimieren Sie den Code in der Datei",
-  "In web page parsing...": "Beim Parsen von Webseiten..."
+  "In web page parsing...": "Beim Parsen von Webseiten...",
+  "Deep Research": "Tiefgehende Forschung"
 }
