--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -852,5 +852,6 @@
   "Introduce the code in the file": "Представьте код в файле",
   "What's the main purpose of the file's code": "Какова основная цель кода в файле",
   "Optimize the code in the file": " Оптимизируйте код в файле",
-  "In web page parsing...": "При парсинге веб-страниц..."
+  "In web page parsing...": "При парсинге веб-страниц...",
+  "Deep Research": "Глубокое исследование"
 }
