--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -56,7 +56,7 @@
   "Archive": "存档",
   "Archived Chats": "已存档的聊天记录",
   "are allowed - Activate this command by typing": "是被允许的 - 通过输入来激活此命令",
-  "Are you sure to become a distinguished Plus member?": "你确定要成为尊贵的 Plus 会员吗？",
+  "Are you sure to become a distinguished member?": "你确定要成为尊贵的会员吗？",
   "Are you sure?": "你确定吗？",
   "Attach file": "附加文件",
   "Attention to detail": "注重细节",
@@ -577,8 +577,8 @@
   "Update password": "更新密码",
   "Upgrade": "升级",
   "Upgrade Plan": "升级计划",
-  "Upgrade to Plus": "升级到 Plus",
-  "Upgrade to Plus failed!": "升级到 Plus 失败！",
+  "Upgrade to Vip": "升级到 Vip",
+  "Upgrade to Vip failed!": "升级到 Vip 失败！",
   "Upgrading": "正在升级",
   "Failed to obtain authorization information.": "获取授权信息失败。",
   "Authorization failed!": "授权失败！",
@@ -853,5 +853,10 @@
   "What's the main purpose of the file's code": "文件中的代码的主要用途是什么",
   "Optimize the code in the file": "优化文件中的代码",
   "In web page parsing...": "网页分析中...",
-  "Deep Research": "深度搜索"
+  "Deep Research": "深度搜索",
+  "Basic Vip": "基础VIP",
+  "Standard Vip": "标准VIP",
+  "Pro Vip": "高级VIP",
+  "Month": "月",
+  "Year": "年"
 }
