--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -746,9 +746,10 @@
   "The number of people invited each day should not exceed 20.": "하루에 초대할 수 있는 인원 수는 20명을 초과해서는 안 됩니다.",
   "For every person invited, and if the invited person signs in continuously for three times, the inviter will receive a reward of <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC, The deadline for the activity is 2025-04-11 00:00:00.": "초대한 모든 사람에 대해 초대된 사람이 연속으로 세 번 로그인하면, 초대자는 <span style='color: rgba(184, 142, 86, 1);'>3,000</span> DGC의 보상을 받을 것입니다，행사의 마감일은 2025-04-11 00:00:00 입니다.",
   "III. Clock in Reward": "III. 출근 기록 보상",
-  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>60</span> days after authentication is completed.": "인증이 완료된 후 <span style='color: rgba(184, 142, 86, 1);'>60</span>일 동안 출근 기록 보상이 유효합니다.",
+  "Check in reward is valid for <span style='color: rgba(184, 142, 86, 1);'>180</span> days after authentication is completed.": "인증이 완료된 후 <span style='color: rgba(184, 142, 86, 1);'>180</span>일 동안 출근 기록 보상이 유효합니다.",
   "Logging in and clocking in for <span style='color: rgba(184, 142, 86, 1);'>1</span> day can earn <span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards; maximum of <span style='color: rgba(184, 142, 86, 1);'>30</span> Clock in rewards.": "<span style='color: rgba(184, 142, 86, 1);'>1</span>일 동안 로그인하고 출근 기록을 남기는 경우 <span style='color: rgba(184, 142, 86, 1);'>100</span>개의 DGC 보상을 받을 수 있습니다. 출근 기록 보상은 최대 <span style='color: rgba(184, 142, 86, 1);'>30</span>회까지 가능합니다.",
   "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC rewards requires completing KYC, and it must be claimed on the same day; it will expire if not claimed.": "<span style='color: rgba(184, 142, 86, 1);'>100</span> DGC 보상은 고객인식 KYC 절차를 완료해야 하며, 같은 날에 청구해야 합니다. 청구하지 않으면 만료됩니다.",
+  "The check-in reward has expired!": "체크인 보상이 만료되었습니다!",
   "Show me a code snippet": "코드 조각을 보여주세요",
   "of a website's sticky header": "웹사이트의 고정 헤더의",
   "Explain options trading": "옵션 거래를 설명해주세요",
